--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">MyMusicApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_new_music">NewMusicActivity</string>
+    <string name="title_activity_new_song">NewSongActivity</string>
+    <string name="title_activity_details">DetailsActivity</string>
+
 </resources>
